--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,14 +8,15 @@
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "https://miro.medium.com/max/281/1*sD6jx0B5R461rYQGC24ixQ.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "logo512.png",
+      "src": "https://miro.medium.com/max/281/1*sD6jx0B5R461rYQGC24ixQ.png",
       "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "512x512",
+      "purpose": "maskable"
     }
   ],
   "start_url": ".",
